--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.env
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -8,4 +8,5 @@
 /var/
 /vendor/
 .env
+.env.local
 ###< symfony/framework-bundle ###
