--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,41 @@
-version: '3'
+# version: '3'
 
-services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-14}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+# services:
+#   app:
+#     build: 
+#       context: .
+#       dockerfile: docker/php/Dockerfile
+#     image: "eatwell_app"
+#     depends_on:
+#       -db
+#     volumes:
+#       - .:/projects:rw
+#       - app-var:/projects/var:rw
+#       - ./vendor:/projects/vendor:cached
+#       - ./docker/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+#       - ./docker/php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  db-data:
-###< doctrine/doctrine-bundle ###
+#   www:
+#     build:
+#       context: .
+#       dockerfile: docker/nginx/Dockerfile
+#     image: eatwell/nginx
+#     container_name: "eatwell_www"
+#     volumes:
+#       - ./web:/projects/web:ro
+#     ports:
+#       - "80:80"
+
+#   db:
+#     build:
+#       context: docker/database
+#     environment:
+#       MYSQL_USER: eatwell
+#       MYSQL_PASSWORD: eatwell
+#       MYSQL_DATABASE: eatwell_dev
+#       MYSQL_ROOT_PASSWORD: root
+#     volumes:
+#       - ./dev/sql/initial-server-data.sql:/docker-entrypoint-initdb.d/initial-prod-data-and-schema.sql
+#       - db_data:/var/lib/mysql
+#     ports:
+#       - "3306:3306"
